--- a/style.css
+++ b/style.css
@@ -118,82 +118,6 @@ header a:hover {
 }
 
 
-/* header {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    padding: 30px 10px;
-    background-color: rgb(3, 3, 3);
-    color: white;
-}
-
-@media screen and (max-width: 800px) {
-    header {
-        flex-direction: column;
-        justify-content: left;
-    }
-
-    header #logo a {
-        text-align: center;
-    }
-}
-
-@media screen and (max-width: 480px) {
-    header {
-        justify-content: left;
-    }
-}
-
-.logo{
-    text-align: right;
-}
-
-
-nav {
- display: flex;
-  justify-content: space-between;
-  align-items: center;
-  
-}
-
-
-.nav_links {
-    list-style: none;
-    padding: 0 10px 0 0;
-    
-}
-
-.nav_links li {
-    display: inline-block;
-    padding: 0px 8rem;
-}
-
-@media screen and (max-width: 480px) {
-    .logo {
-      padding-right: 10rem;
-      text-align: right;
-    }
-    .nav_links li a {
-    display: flex;
-    justify-content: left;
-    padding-right: 12rem;
-
-    }
-}
-
-.nav_links li a {
-    transition: all 0.3s ease 0s;
-    color: white;
-}
-
-.nav_links li a:hover {
-   color: purple;
-}; 
-
-.heading h1{
-    color: red;
-} */
-
 /* user form */
 
 main {
@@ -339,6 +263,8 @@ footer {
     display: flex;
     flex-direction: center;
     justify-content: center;
+    background-color: black;
+    color: white;
 }
 
 footer > div {
